employee-app/public/css/login1.css
* {
    font-family: sans-serif;
  }
  
  .login-viewport {
    width: 100vw;
    height: 100vh;
  
    display: flex;
    justify-content: center;
    align-items: center;
  
    flex-direction: column;
  }
  
  .login-logo {
    width: 100px;
  
    margin: 0 0 1em 0;
  }
  
  .login-form {
    width: 90%;
    height: fit-content;
  }
  
  .login-form-group {
    display: flex;
    flex-direction: column;
    margin: 0 0 2em 0;
  }
  
  .login-form-label {
    width: 100%;
    height: 1em;
    margin: 0 0 0.25em 0;
  
    font-size: 1.25em;
    font-weight: bold;
    color: var(--near-black);
  }
  
  .login-form-input {
    width: 100%;
    padding: var(--small-px);
    font-size: 1.1em;
  
    border-radius: var(--small-px);
    border-style: solid;
    border-color: hsl(219, 32%, 38%);
  }
  
  .login-form-input:focus {
    border-radius: var(--small-px);
    border-style: solid;
    border-color: rgb(40, 120, 255);
  }
  
  .login-form-submit {
    width: 100%;
    padding: var(--small-px);
    font-size: 1.1em;
  
    color: var(--near-white);
    background: var(--blue-gradient);
  
    border-radius: var(--small-px);
    border-style: none;
  }
  
  .login-form-submit:hover {
    filter: brightness(1.2);
  }

